<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Swiracle</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="without_auth">Continue without authorization</string>

    <string name="birthday_question">When\'s your birthday?</string>
    <string name="birthday_description">Your birthday won\'t be shown publicly.</string>
    <string name="birthday">Birthday</string>

    <string name="enter_email">Enter your email address.</string>
    <string name="email">Email address</string>
    <string name="terms">By continuing, you agree to the fact,
        that this app is still in development,
        so if you lose your data or something else happens
        - it was your choice to be there.</string>

    <string name="enter_name">Enter your name.</string>
    <string name="real_name">Please use your real name.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Name</string>

    <string name="select_gender">Select your gender.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <string name="username_enter">Enter your username.</string>
    <string name="username_description">Username should be unique combination of letters,
        its size shouldn\'t be more than 16 symbols.</string>

    <string name="password_set">Set password.</string>
    <string name="password_description">Your password should be strong enough,
        min length is 8 symbols - max is 20.
        Try not to use simple ones like \'qwerty\'.</string>
    <string name="password_again">Please, enter your password again.</string>

    <string name="title_home">Home</string>
    <string name="title_popular">Popular</string>
    <string name="title_create">Create</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="following">Following</string>
    <string name="divider_home_menu">|</string>
    <string name="for_you">For You</string>

    <string name="new_post_text">New post</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="multiple">Multiple</string>

    <string name="share">Share</string>
    <string name="set_info_title">Name your image…</string>
    <string name="set_info_description">Write a description…</string>
    <string name="set_info_add_element">Add element</string>

    <string name="toast_empty_title">Empty title!</string>

    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="likes">Likes</string>

    <string name="subscribe">Subscribe</string>
    <string name="message">Message</string>
    <string name="edit_profile">Edit profile</string>
</resources>